Updated Application and Window Icons to new 4diac Logo

--- a/plugins/org.eclipse.fordiac.ide/build.properties
+++ b/plugins/org.eclipse.fordiac.ide/build.properties
@@ -5,11 +5,10 @@ bin.includes = plugin.xml,\
                .,\
                plugin_customization.ini,\
                splash.bmp,\
-               OSGI-INF/l10n/bundle.properties,\
+               plugin.properties,\
                about.mappings,\
                icons/,\
                intro/,\
-               OSGI-INF/,\
                html/,\
                html/toc.xml,\
                .options
