Implemented the QualNameChangeListener for updating plant hierarchy

--- a/plugins/org.eclipse.fordiac.ide.hierarchymanager.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.hierarchymanager.ui/plugin.xml
@@ -274,4 +274,8 @@
             </description>
       </decorator>
    </extension>
+    <extension
+          point="org.eclipse.fordiac.ide.model.commands.QualNameChangeListener">
+          <listener class = "org.eclipse.fordiac.ide.hierarchymanager.ui.listeners.HierachyManagerUpdateListener"/>
+    </extension>
 </plugin>
