--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -734,3 +734,4 @@ _UI_SimpleECState_simpleFBType_feature = Simple FB Type
 _UI_SimpleFBType_simpleECStates_feature = Simple EC States
 _UI_TextFunction_varargs_feature = Varargs
 _UI_TextMethod_varargs_feature = Varargs
+_UI_Service_comment_feature = Comment
