Add toggle value for all BOOL variables while debugging
Add toggle value for all BOOL variables while debugging, including
struct members.

--- a/plugins/org.eclipse.fordiac.ide.debug.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.debug.ui/plugin.xml
@@ -145,4 +145,23 @@
 			</adapter>
 		</factory>
 	</extension>
+	<extension
+		point="org.eclipse.ui.handlers">
+		<handler
+			class="org.eclipse.fordiac.ide.debug.ui.handler.ToggleBoolVariableHandler"
+			commandId="org.eclipse.fordiac.ide.application.commands.toggleBoolValue">
+			<activeWhen>
+				<with
+					variable="selection">
+					<iterate
+						ifEmpty="false"
+						operator="and">
+						<instanceof
+							value="org.eclipse.fordiac.ide.debug.EvaluatorDebugVariable">
+						</instanceof>
+					</iterate>
+				</with>
+			</activeWhen>
+		</handler>
+	</extension>
 </plugin>
