Improve changing values in variables view
Improve changing values in variables view:
- Add shortcut to change variable value
- Allow changing multiple values at once
- Show simplified input dialog for single values
- Show structured edit dialog for structured values
- Show structured edit dialog for multiple variables

--- a/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.deployment.debug.ui/plugin.xml
@@ -1031,4 +1031,11 @@
 			name="Deployment">
 		</page>
 	</extension>
+	<extension
+		point="org.eclipse.debug.ui.variableValueEditors">
+		<variableValueEditor
+			class="org.eclipse.fordiac.ide.debug.ui.editor.EvaluatorVariableValueEditor"
+			modelId="org.eclipse.fordiac.ide.deployment.debug.model">
+		</variableValueEditor>
+	</extension>
 </plugin>
