Provide text action bar contributor for text editors in type editor
The text editors inside a multi-page type editor need to have a proper
text action contributor to properly support switching of actions between
pages and also for the new search overlay. This provides a text action
bar contributor for text editors inside a type editor.

--- a/plugins/org.eclipse.fordiac.ide.fbtypeeditor/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.fbtypeeditor/plugin.xml
@@ -14,7 +14,7 @@
          point="org.eclipse.ui.editors">
       <editor
             class="org.eclipse.fordiac.ide.fbtypeeditor.editors.FBTypeEditor"
-            contributorClass="org.eclipse.fordiac.ide.gef.editors.GraphicalMultipageEditorContributor"
+            contributorClass="org.eclipse.fordiac.ide.typeeditor.TypeEditorContributor"
             extensions="fbt, fct, adp"
             icon="fordiacimage://ICON_FB_TYPE"
             id="org.eclipse.fordiac.ide.fbtypeeditor.editors.FBTypeEditor"
