Add refactoring for global constants types

--- a/plugins/org.eclipse.fordiac.ide.globalconstantseditor.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.globalconstantseditor.ui/plugin.xml
@@ -573,7 +573,26 @@
  <extension
        point="org.eclipse.xtext.ui.resourceRelocationStrategy">
     <strategy
-          class="org.eclipse.fordiac.ide.globalconstantseditor.ui.GlobalConstantsExecutableExtensionFactory:org.eclipse.fordiac.ide.structuredtextcore.ui.refactoring.STCoreResourceRelocationStrategy">
+          class="org.eclipse.fordiac.ide.globalconstantseditor.ui.GlobalConstantsExecutableExtensionFactory:org.eclipse.fordiac.ide.globalconstantseditor.ui.refactoring.GlobalConstantsResourceRelocationStrategy">
     </strategy>
+ </extension>
+ <extension
+       point="org.eclipse.ltk.core.refactoring.renameParticipants">
+    <renameParticipant
+          class="org.eclipse.fordiac.ide.globalconstantseditor.ui.refactoring.GlobalConstantsRenameTypeRefactoringParticipant"
+          id="org.eclipse.fordiac.ide.globalconstantseditor.ui.renameGlobalConstantsParticipant"
+          name="Rename Global Constants">
+       <enablement>
+          <adapt
+                type="org.eclipse.xtext.ui.refactoring.ui.IRenameElementContext">
+             <with
+                   variable="processorIdentifier">
+                <equals
+                      value="org.eclipse.fordiac.ide.globalconstantseditor.GlobalConstants.renameProcessor2">
+                </equals>
+             </with>
+          </adapt>
+       </enablement>
+    </renameParticipant>
  </extension>
 </plugin>
