--- a/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.typemanagement/plugin.xml
@@ -550,6 +550,11 @@
                      property="org.eclipse.core.resources.extension"
                      value="sub">
                </test>
+               <test
+                     forcePluginActivation="true"
+                     property="org.eclipse.core.resources.extension"
+                     value="gcf">
+               </test>
                </or>
              </and>
          </enablement>
