handle erroneous st code in model search
Inform the user that a search result may be inaccurate if the resolved st code contains errors.

--- a/plugins/org.eclipse.fordiac.ide.model.search/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.search/plugin.properties
@@ -34,3 +34,5 @@ TypeQuery=Type Query
 Warning=Warning
 WorkspaceScope=Workspace
 SearchForTypeReferences=Search for references of type {0}
+STSearchErrorDialog_Title=Inaccurate Search
+STSearchErrorDialog_Body=The search may be inaccurate as there are errors in the resolved ST code.
