New Wizard for Creating Projects based on Examples
This wizard will take zip files located in an examples directory of
4diac IDE and list them. Users can select an example and import them.
The example will be copied so that users can modify them. Per default
the target location is the workspace but a directory can be chosen.

This new wizard is also added to the title page for easy access for new
users.

--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.properties
@@ -26,9 +26,17 @@ MissingExportBuilderMarkerResolution_Label=Add 4diac Export Builder
 
 
 # Wizard descriptions
-New4diacProjectWizard_WizardName=New 4diac IDE Project
-New4diacProjectWizard_WizardTitle=4diac IDE Project
+New4diacProjectWizard_WizardName=4diac IDE Project
+New4diacProjectWizard_WizardTitle=New 4diac IDE Project
 New4diacProjectWizard_WizardDesc=Create a new 4diac IDE Project
+
+New4diacExampleWizard_WizardName=4diac IDE Example Project
+New4diacExampleWizard_WizardTitle=New 4diac IDE Example Project
+New4diacExampleWizard_WizardDesc=Create a new 4diac IDE Example Project
+New4diacExampleWizard_SelectExample=Select Example:
+New4diacExampleWizard_NoExampleSelected=An example needs to be selected
+New4diacExampleWizard_CreatingExample=Creating 4diac IDE example: {0}
+New4diacExampleWizard_CopyingContentIntoNewProject = Copying example content into new project
 
 New4diacProjectWizard_LibPageName=4diac IDE Project System Libraries
 New4diacProjectWizard_LibPageTitle=4diac IDE Project System Libraries
@@ -43,8 +51,8 @@ NewSystemWizardPage_CreateNewSystem=Create a new System
 NewSystemWizard_ShowAdvanced = &Advanced >>
 NewSystemWizard_HideAdvanced = << &Advanced
 
-NewSystemWizardPage_NewSystemName = New IEC 61499 System
-NewSystemWizardPage_Title = IEC 61499 System
+NewSystemWizardPage_NewSystemName = IEC 61499 System
+NewSystemWizardPage_NewSystemTitle = New IEC 61499 System
 NewSystemWizard.description = Create a new IEC 61499 System
 
 OpenApplicationForEditing=Open application for editing when done
