--- a/plugins/org.eclipse.fordiac.ide/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide/plugin.properties
@@ -30,6 +30,8 @@ introQuicklink.ImportProject.label = Import Existing Projects
 introQuicklink.ImportProject.description = Import existing 4diac IDE projects from the file system or an archive
 introQuicklink.New4diacIDEProject.label = Create New 4diac IDE Project
 introQuicklink.New4diacIDEProject.description = Create a new 4diac IDE IEC 61499 project with an Automation System
+introQuicklink.New4diacIDEExampleProject.label = Create New 4diac IDE Example Project
+introQuicklink.New4diacIDEExampleProject.description = Create a new 4diac IDE IEC 61499 example project
 
 perspective.name = System
 product.name = 4diac IDE
