--- a/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.systemmanagement.ui/plugin.xml
@@ -27,6 +27,19 @@
             %NewSystemWizard.description
          </description>
       </wizard>
+      <wizard
+            category="org.eclipse.fordiac.ide.newWizard.category"
+            class="org.eclipse.fordiac.ide.systemmanagement.ui.wizard.New4diacExampleWizard"
+            finalPerspective="org.eclipse.fordiac.ide.SystemPerspective"
+            icon="fordiacimage://ICON_NEW_4DIAC_PROJECT"
+            id="org.eclipse.fordiac.ide.systemmanagement.ui.wizard.New4diacExampleWizard"
+            name="%New4diacExampleWizard_WizardName"
+            preferredPerspectives="org.eclipse.fordiac.ide.SystemPerspective, org.eclipse.fordiac.ide.typemanagement.perspective"
+            project="true">
+         <description>
+            %New4diacExampleWizard_WizardDesc
+         </description>
+      </wizard>
       <category
             id="org.eclipse.fordiac.ide.newWizard.category"
             name="%4DIAC_IDE_Category">
