Changed EnumeratedType to derive from AnyDerivedType

--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -735,3 +735,4 @@ _UI_SimpleFBType_simpleECStates_feature = Simple EC States
 _UI_TextFunction_varargs_feature = Varargs
 _UI_TextMethod_varargs_feature = Varargs
 _UI_Service_comment_feature = Comment
+_UI_EnumeratedType_enumeratedValues_feature = Enumerated Values
