Add opposite for type in EnumeratedValue

--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -736,3 +736,4 @@ _UI_TextFunction_varargs_feature = Varargs
 _UI_TextMethod_varargs_feature = Varargs
 _UI_Service_comment_feature = Comment
 _UI_EnumeratedType_enumeratedValues_feature = Enumerated Values
+_UI_EnumeratedValue_type_feature = Type
