Add missing plugin.properties to binary build

--- a/plugins/org.eclipse.fordiac.ide.globalconstantseditor.model/build.properties
+++ b/plugins/org.eclipse.fordiac.ide.globalconstantseditor.model/build.properties
@@ -2,7 +2,8 @@ source.. = src-gen/
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
-               model/
+               model/,\
+               plugin.properties
 bin.excludes = **/*.mwe2,\
                **/*.xtend
 output.. = bin/
