--- a/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm.model/build.properties
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextalgorithm.model/build.properties
@@ -3,7 +3,8 @@ source.. = src/,\
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
-               model/
+               model/,\
+               plugin.properties
 bin.excludes = **/*.mwe2,\
                **/*.xtend
 output.. = bin/
