--- a/plugins/org.eclipse.fordiac.ide/build.properties
+++ b/plugins/org.eclipse.fordiac.ide/build.properties
@@ -4,7 +4,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                plugin_customization.ini,\
-               splash.bmp,\
+               splash.png,\
                plugin.properties,\
                about.mappings,\
                icons/,\
