Upgraded intro and about to new 4diac IDE logo #1036
fixes https://github.com/eclipse-4diac/4diac-ide/issues/1036

--- a/plugins/org.eclipse.fordiac.ide/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide/plugin.xml
@@ -81,7 +81,7 @@
          </property>
          <property
                name="introBrandingImage"
-               value="product:intro/graphics/fordiac_logo.png">
+               value="product:intro/graphics/4diac_IDE_Logo.svg">
          </property>
          <property
     name="cssTheme"
