Add rename refactoring for function FB parameters
Add participants to handle rename refactoring for parameters of function
FBs when triggered from a caller in ST code and also from inside the ST
code of the function FB.

--- a/plugins/org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui/plugin.xml
+++ b/plugins/org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui/plugin.xml
@@ -640,5 +640,37 @@
           </adapt>
        </enablement>
     </renameParticipant>
+    <renameParticipant
+          class="org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui.STFunctionExecutableExtensionFactory:org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui.refactoring.STFunctionRenameFunctionParameterRefactoringParticipant"
+          id="org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui.renameFunctionParameterParticipant"
+          name="Rename Function Parameters">
+       <enablement>
+          <adapt
+                type="org.eclipse.xtext.ui.refactoring.ui.IRenameElementContext">
+             <with
+                   variable="processorIdentifier">
+                <equals
+                      value="org.eclipse.fordiac.ide.structuredtextfunctioneditor.STFunction.renameProcessor2">
+                </equals>
+             </with>
+          </adapt>
+       </enablement>
+    </renameParticipant>
+    <renameParticipant
+          class="org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui.STFunctionExecutableExtensionFactory:org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui.refactoring.STFunctionRenameInterfaceParameterRefactoringParticipant"
+          id="org.eclipse.fordiac.ide.structuredtextfunctioneditor.ui.renameInterfaceParameterParticipant"
+          name="Rename Interface References">
+       <enablement>
+          <adapt
+                type="org.eclipse.xtext.ui.refactoring.ui.IRenameElementContext">
+             <with
+                   variable="processorIdentifier">
+                <equals
+                      value="org.eclipse.fordiac.ide.structuredtextfunctioneditor.STFunction.renameProcessor2">
+                </equals>
+             </with>
+          </adapt>
+       </enablement>
+    </renameParticipant>
  </extension>
 </plugin>
