Add export attribute in buildpath
Also fix sorting of attributes with EList.

--- a/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.edit/plugin.properties
@@ -701,6 +701,7 @@ _UI_PatternType_glob_literal = glob
 _UI_PatternType_regex_literal = regex
 _UI_Attribute_name_feature = Name
 _UI_Attribute_name_ignore_warnings = Ignore Warnings
+_UI_Attribute_name_export = Include in export
 _UI_SourceFolder_attributes_feature = Attributes
 _UI_ITypedElement_type = ITyped Element
 _UI_InitialValueRefreshJob_name = Refresh initial value for {0}
