added interface value matching to model search page

--- a/plugins/org.eclipse.fordiac.ide.model.search/plugin.properties
+++ b/plugins/org.eclipse.fordiac.ide.model.search/plugin.properties
@@ -17,6 +17,7 @@ ContainingText=Containing Text:
 Element=Element
 ErrorMessageSearch=The search box is empty or none of the checkboxes are ticked! Please correct that and try to search again
 ExactNameMatching=Exact Name Matching
+TypeInterfaceValueMatching=Type Interface Value Matching
 InstanceName=Instance Name
 Jokers=(* - any string, ? - any character)
 Location=Location
